--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -838,6 +838,13 @@ TestFlight区域限制解除 = type=http-request,script-path=https://cdn.jsdeliv
 #91解锁VIP
 91VIP = type=http-response,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/91ShortVideo.js,pattern=^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$,max-size=131072,requires-body=true,script-update-interval=24,enable=true
 
+# BoxJs 稳定版 访问商店版：http://boxjs.com
+  Rewrite: BoxJs = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=120
+
+# BoxJs 测试版    访问测试版：http://boxjs.net
+ # Rewrite: BoxJs = type=http-request,pattern=^https?://boxjs.net,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js, requires-body=true, timeout=120
+
+
 #钉钉打卡提醒
 DingdingClock = type=cron,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/clock_in.js,cronexpr="0 9,18 * * 1-5",script-update-interval=24,enable=true
 
