--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -46,7 +46,9 @@ RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ru
 URL-REGEX,^https:\/\/.+\.googlevideo\.com\/.+&oad,REJECT
 DOMAIN-SUFFIX,tiktokv.com,PROXY
 DOMAIN-SUFFIX,musical.ly,PROXY
-#B站去广告
+
+#B站去广告// 开屏广告
+URL-REGEX, ^https://app\.bilibili\.com/x/v2/splash/list, REJECT
 DOMAIN-SUFFIX,cm.bilibili.com,REJECT
 URL-REGEX,^https?:\/\/api\.bilibili\.com\/x\/v2\/dm\/ad,REJECT
 URL-REGEX,^https?:\/\/api\.bilibili\.com\/pgc\/season\/app\/related\/recommend\?,REJECT
@@ -745,15 +747,14 @@ ctier=[A-Z] citer=A 302
 
 [Script]
 ##脚本区域
-#微博去广告
+
+#微博去广告 by-yichahucha
+weiboad = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=131072,requires-body=true,script-update-interval=24,enable=true
+weiboad = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),max-size=-1,requires-body=true,script-update-interval=24,enable=true
 微博 全部关注 = type=http-response,script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/weibo/weibo_statuses.js,pattern=^https://(api\.weibo\.cn|mapi\.weibo\.com)/2/(statuses/unread_hot_timeline|statuses/friends/timeline|video/tiny_stream_video_list|statuses/unread_friends_timeline)\?,max-size=131072,requires-body=true,timeout=10,enable=true
-
 超话 帖子/精华/官方 = type=http-response,script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/weibo/weibo_cardlist.js,pattern=^https://(api\.weibo\.cn|mapi\.weibo\.com)/2/(searchall|page)\?,max-size=131072,requires-body=true,timeout=10,enable=true
-
 微博开屏广告 = type=http-response,script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/weibo/weibo_sdkad.js,pattern=^https://sdkapp\.uve\.weibo\.com/interface/sdk/sdkad\.php$,max-size=131072,requires-body=true,timeout=10,enable=true
-
 每条微博下面 创作者广告共享计划 = type=http-response,script-path=script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/weibo/weibo_statuses_extend.js,pattern=^https://(api\.weibo\.cn|mapi\.weibo\.com)/2/statuses/extend\?,max-size=131072,requires-body=true,timeout=10,enable=true
-
 微博评论 = type=http-response,script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/weibo/weibo_comment.js,pattern=^https://(api\.weibo\.cn|mapi\.weibo\.com)/2/comments/build_comments\?,max-size=131072,requires-body=true,timeout=10,enable=true
 
 #DNSPOD
@@ -775,10 +776,6 @@ jd_price = type=http-response type=http-response,script-path=https://raw.githubu
 #京东cookie  by-NobyDa
 JD_Cookie = type=http-request,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-update-interval=86400
 ,enable=true
-
-#微博去广告 by-yichahucha
-weiboad = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=131072,requires-body=true,script-update-interval=24,enable=true
-weiboad = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),max-size=-1,requires-body=true,script-update-interval=24,enable=true
 
 #Adguardpremium   by-iEwha
 Adguardpremium = type=http-response,script-path=https://raw.githubusercontent.com/iEwha/Profiles/master/Script/adguard.js,pattern=^https:\/\/mobile-api\.adguard\.com\/api\/1\.0\/ios_validate_receipt$,max-size=131072,requires-body=true,timeout=10,enable=true
@@ -812,6 +809,8 @@ B站-动态去广告 = type=http-response,script-path=https://raw.githubusercont
 B站-追番去广告 = type=http-response,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js,pattern=^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi,max-size=131072,requires-body=true,timeout=10,enable=true
 B站-标签页处理 = type=http-response,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab,max-size=131072,requires-body=true,timeout=10,enable=true
 B站-1080+ = type=http-request,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js,pattern=^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)),max-size=1048576,requires-body=true,timeout=10,debug=true,enable=true
+B站-播放器广告 = type=http-response,script-path=script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/bilibili/bilibili_view.js,pattern=^https://app\.bilibili\.com/bilibili\.app\.view\.v1\.View/View$,max-size=131072,requires-body=true,timeout=10,enable=true
+B站-短视频的推荐 = type=http-response,script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/bilibili/bilibili_feed.js,pattern=^https://app\.bilibili\.com/x/v2/feed/index(/story)?\?access_key,max-size=131072,requires-body=true,timeout=10,enable=true
 
 #   美标空气质量 
 美标空气质量 = type=http-response,script-path=https://raw.githubusercontent.com/VirgilClyne/iRingo/main/js/Apple_Weather.js,pattern=^https?:\/\/weather-data\.apple\.com\/(v1|v2)\/weather.*(?!dataSets=forecastNextHour)(include=.*air_quality.*|dataSets=.*airQuality.*).*(country=[A-Z]{2})?.*,max-size=131072,requires-body=true,timeout=10,enable=true
