--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,6 +1,6 @@
 # Shadowrocket rule-set
 [General]
-# Update-2022.2.20.00.55
+# Update-2022.2.21 （不定期更新）
 # ShadowRocket 现已支持 DoH / DoT
 # 您可以根据需求自行决定选用 DNS 服务器的种类和组合方式，例如：混用服务器来实现最佳解析速度；单独 DoH 使用来达到最佳安全性和最低污染度。
 dns-server = 13800000000.rubyfish.cn:853, 1.2.4.8, 114.114.114.114, 223.5.5.5, 8.8.8.8, system
@@ -11,7 +11,8 @@ bypass-system = true
 ipv6 = true
 ####参考update-url = https://github.com/a00789123/rules-bak/raw/main/Shadow-Rule-set.conf####
 ####参考https://raw.githubusercontent.com/mymoonyue/Shadowrocket/master/XiaodingdangPro.conf
-
+####参考还有其他脚本作者 规则来源神机和毒奶等  纯自用脚本 
+####说明；如果签到脚本不需要可以删掉前面的#字符 
 [Rule]
 # Unbreak
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Unbreak.list,DIRECT
