--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -16,6 +16,7 @@ ipv6 = true
 [Rule]
 # Unbreak 规则修正 
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Unbreak.list,DIRECT
+
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #Advertising 去广告 
@@ -113,12 +114,36 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/s
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #网易云音乐&QQ音乐去广告
-DOMAIN-SUFFIX,ssp.tencentmusic.com,REJECT
-DOMAIN-SUFFIX,adstats.tencentmusic.com,REJECT
-DOMAIN-SUFFIX,adexpo.tencentmusic.com,REJECT
-DOMAIN-SUFFIX,adplay.tencentmusic.com,REJECT
-DOMAIN-SUFFIX,ad.tencentmusic.com,REJECT
-DOMAIN-SUFFIX,adcdn.tencentmusic.com,REJECT
+
+DOMAIN,ssp.tencentmusic.com,REJECT
+DOMAIN,adplay.tencentmusic.com,REJECT
+DOMAIN,adstats.tencentmusic.com,REJECT
+DOMAIN,ad.tencentmusic.com,REJECT
+DOMAIN,adcdn.tencentmusic.com,REJECT
+DOMAIN,adexpo.tencentmusic.com,REJECT
+DOMAIN,adclick.tencentmusic.com,REJECT
+DOMAIN,p.l.qq.com,REJECT
+DOMAIN,sdk.e.qq.com,REJECT
+DOMAIN,pgdt.gtimg.cn,REJECT
+DOMAIN,oth.bls.mdt.qq.com,REJECT
+DOMAIN,oth.str.mdt.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN,mazu.m.qq.com,REJECT
+DOMAIN,tmfmazu.m.qq.com,REJECT
+DOMAIN,catdot.dianping.com,REJECT
+DOMAIN,tmfmazu4.m.qq.com,REJECT
+DOMAIN,yun-hl.3g.qq.com,REJECT
+DOMAIN,amdc.alipay.com,REJECT
+DOMAIN,ios.rqd.qq.com,REJECT
+DOMAIN,hd2.3g.qq.com,REJECT
+DOMAIN,w.aq.qq.com,REJECT
+DOMAIN,mtrace.qq.com,REJECT
+DOMAIN,otheve.beacon.qq.com,REJECT
+DOMAIN,h.trace.qq.com,REJECT
+
+#其他
+DOMAIN-SUFFIX,sngdia.imtmp.net,REJECT
+DOMAIN-SUFFIX,ivapp.net,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-SUFFIX,yijiuplus.com,REJECT
 DOMAIN-SUFFIX,jddebug.com,REJECT
@@ -136,23 +161,13 @@ DOMAIN-SUFFIX,dutils.com,REJECT
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN,data.flurry.com,REJECT
-DOMAIN,mazu.m.qq.com,REJECT
-DOMAIN,tmfmazu.m.qq.com,REJECT
-DOMAIN,catdot.dianping.com,REJECT
-DOMAIN,tmfmazu4.m.qq.com,REJECT
-DOMAIN,yun-hl.3g.qq.com,REJECT
-DOMAIN,amdc.alipay.com,REJECT
-DOMAIN,portal-portm.meituan.com,REJECT
-DOMAIN,ios.rqd.qq.com,REJECT
-DOMAIN,appsec-mobile.meituan.com,REJECT
-DOMAIN,hd2.3g.qq.com,REJECT
-DOMAIN,w.aq.qq.com,REJECT
-DOMAIN,httpdns.meituan.com,REJECT
-DOMAIN,mtrace.qq.com,REJECT
-DOMAIN,otheve.beacon.qq.com,REJECT
-DOMAIN,h.trace.qq.com,REJECT
+
+#美团
 DOMAIN,dd.meituan.com,REJECT
+DOMAIN,httpdns.meituan.com,REJECT
 DOMAIN,appsec-mobile.meituan.com,REJECT
+DOMAIN,portal-portm.meituan.com,REJECT
+
 # GeoIP China
 GEOIP,CN,Direct
 FINAL,PROXY
