--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -772,6 +772,10 @@ ctier=[A-Z] citer=A 302
 # > Zhan - tiku.zhan.com
 ^(http|https):\/\/tiku\.zhan\.com\/Common\/newAd\/ - reject
 # > Zhangyue - webboot.zhangyue.com,saad.ms.zhangyue.net
+^(http|https):\/\/ih2\.ireader\.com\/zyapi\/bookstore\/ad\/ - reject
+^(http|https):\/\/ih2\.ireader\.com\/zyapi\/self\/screen\/ad - reject
+^(http|https):\/\/ih2\.ireader\.com\/zycl\/api\/ad\/ url - reject
+^(http|https):\/\/ih2\.ireader\.com\/zycl\/api\/ad\/ url - reject
 ^(http|https):\/\/webboot\.zhangyue\.com\/zycl\/api\/ad\/ - reject
 ^(http|https):\/\/saad\.ms\.zhangyue\.net\/ad - reject
 # ——————————————————————————分割线——————————————————————————————————————————
