--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -945,7 +945,7 @@ Notability解锁订阅= type=http-response,script-path=https://raw.githubusercon
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #YouTube 中文字幕  by-id77  注意：需配合捷径：https://www.icloud.com/shortcuts/345e405cc8c54fb0bc8608f887b8b485
-
+YouTube中文字幕 = type=http-request,pattern=https:\/\/www.youtube.com\/api\/timedtext.+,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Neurogram-R/Surge/master/YouTube-Subtrans.js
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #WPS办公𝙫𝙞𝙥   by-NobyDa
