--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -925,12 +925,12 @@ Sub-Store = type=http-response,script-path=https://raw.githubusercontent.com/Pen
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #Picsew
-Picsew = type=http-response,script-path=https://github.com/yfue/surge/raw/Module/Picsew.js,pattern=^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt，max-size=131072,requires-body=true,timeout=10,enable=true
+Picsew = type=http-response,script-path=https://github.com/yfue/surge/raw/Module/Picsew.js,pattern=^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=131072,requires-body=true,timeout=10,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #Notability解锁订阅  notability.com  by-yqc007
-Notability解锁订阅= type=http-response,script-path=https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js,pattern=^https?:\/\/notability\.com\/subscriptions，max-size=131072,requires-body=true,timeout=10,enable=true
+Notability解锁订阅= type=http-response,script-path=https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js,pattern=^https?:\/\/notability\.com\/subscriptions,max-size=131072,requires-body=true,timeout=10,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
