--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -115,6 +115,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/s
 
 #网易云音乐&QQ音乐去广告
 
+DOMAIN,admusicpic.music.126.net,REJECT
 DOMAIN,ssp.tencentmusic.com,REJECT
 DOMAIN,adplay.tencentmusic.com,REJECT
 DOMAIN,adstats.tencentmusic.com,REJECT
@@ -142,6 +143,7 @@ DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
 
 #其他
+DOMAIN,aop.huoying666.com,REJECT
 DOMAIN-SUFFIX,sngdia.imtmp.net,REJECT
 DOMAIN-SUFFIX,ivapp.net,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
