--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -243,9 +243,9 @@ dl.l.google.com = server:119.29.29.29
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #酷我音乐去开屏广告 - rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn
-^https?:\/\/rich\.kuwo\.cn\/AdService\/kaiping\/.+ - reject
-^https?:\/\/.+\.kwcdn\.kuwo\.cn\/star\/upload\/.+ - reject
-^https?:\/\/mobilead\.kuwo\.cn\/EcomResourceServer\/adBubble\/.+ - reject
+^https?:\/\/rich\.kuwo\.cn\/AdService\/kaiping\/- reject
+^https?:\/\/.+\.kwcdn\.kuwo\.cn\/star\/upload\/- reject
+^https?:\/\/mobilead\.kuwo\.cn\/EcomResourceServer\/adBubble\/- reject
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
