--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -143,6 +143,8 @@ DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
 
 #其他
+
+DOMAIN-SUFFIX,d.image.i4.cn,REJECT
 DOMAIN,aop.huoying666.com,REJECT
 DOMAIN-SUFFIX,sngdia.imtmp.net,REJECT
 DOMAIN-SUFFIX,ivapp.net,REJECT
