--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -955,7 +955,7 @@ Notability解锁订阅= type=http-response,script-path=https://raw.githubusercon
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
-#YouTube 中文字幕  by-id77  注意：需配合捷径：https://www.icloud.com/shortcuts/345e405cc8c54fb0bc8608f887b8b485
+#YouTube 中文字幕  by-id77 需配合捷径：https://www.icloud.com/shortcuts/b3e2494fca0c4c40ad57625a5607eb82 使用。
 YouTube中文字幕 = type=http-request,pattern=https:\/\/www.youtube.com\/api\/timedtext.+,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/Neurogram-R/Surge/master/YouTube-Subtrans.js
 # ——————————————————————————分割线——————————————————————————————————————————
 
