--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -863,7 +863,7 @@ tb_price = type=http-response,script-path=https://raw.githubusercontent.com/yich
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #京东比价   by-yichahucha
-jd_price = type=http-response type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=131072,requires-body=true,script-update-interval=24,enable=true
+jd_price = type=http-response type=http-response,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/jd_price.js,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=131072,requires-body=true,script-update-interval=24,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
@@ -975,7 +975,7 @@ Lightroom = type=http-response,script-path=https://raw.githubusercontent.com/iSt
 # ——————————————————————————分割线——————————————————————————————————————————
 
 #TestFlight区域限制解除
-TestFlight区域限制解除 = type=http-request,script-path=https://cdn.jsdelivr.net/gh/prajna0/iOS@master/TestFlight_Download.js,pattern=^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$,max-size=131072,requires-body=true,timeout=10,enable=true
+TestFlight区域限制解除 = type=http-request,script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js,pattern=^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$,max-size=131072,requires-body=true,timeout=10,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
