--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -254,12 +254,11 @@ dl.l.google.com = server:119.29.29.29
 #^(http|https):\/\/(www.)?(g|google)\.cn https://www.google.com 302
 
 # Redirect Google search  (新）
-^(http|https)://(.*?[.])?(?:g|google).cn https://$1google.com 302
-^(http|https)://(.*?[.])?(?:g|google).com.hk https://$1google.com 302
+^https?://(.*?[.])?(?:g|google).cn https://$1google.com 302
+^https?://(.*?[.])?(?:g|google).com.hk https://$1google.com 302
 # Redirect Google service
 ^http://(www.)?google\.cn https://www.google.com 302
 ^http://(www.)?g\.cn https://www.google.com 302
-
 
 # Redirect Google Maps Service
 ^(http|https):\/\/(ditu|maps).google\.cn https://maps.google.com 302
