--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -142,6 +142,11 @@ DOMAIN,mtrace.qq.com,REJECT
 DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
 
+# > 拦截100 域名权限
+DOMAIN-SUFFIX,huoying666.com,REJECT
+DOMAIN-SUFFIX,s2.huoying666.com,REJECT
+DOMAIN-SUFFIX,u.huoying666.com,REJECT
+
 #其他
 DOMAIN-SUFFIX,d.image.i4.cn,REJECT
 DOMAIN,aop.huoying666.com,REJECT
