--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -852,7 +852,11 @@ ctier=[A-Z] citer=A 302
 ^https?:\/\/(www\.)?google\.cn https://www.google.com/ncr 302
 
 [Script]
+
 ##脚本区域
+
+bilbii 大会员画质 = type=http-response,script-path=https://github.com/Sunert/Script/raw/master/Script/Bilibili/BiliHD.js,pattern=https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)),max-size=131072,requires-body=true,timeout=10,enable=true
+YouTube 去广告 = type=http-request,script-path=https://choler.github.io/Surge/Script/YouTube.js,pattern=^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A),max-size=131072,requires-body=true,timeout=10,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
@@ -1398,7 +1402,7 @@ B站-动态去广告 = type=http-response,script-path=https://raw.githubusercont
 B站-去除统一设置的皮肤 = type=http-response,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js,pattern=^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\?/,max-size=131072,requires-body=true,timeout=10,enable=true
 B站-播放器广告 = type=http-response,script-path=script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/bilibili/bilibili_view.js,pattern=^https://app\.bilibili\.com/bilibili\.app\.view\.v1\.View/View$,max-size=131072,requires-body=true,timeout=10,enable=true
 B站-短视频的推荐 = type=http-response,script-path=https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/bilibili/bilibili_feed.js,pattern=^https://app\.bilibili\.com/x/v2/feed/index(/story)?\?access_key,max-size=131072,requires-body=true,timeout=10,enable=true
-哔哩哔哩番剧开启1080P+ = type=http-response,script-path=https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/js/backup/bilifj.js,,pattern=^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)),max-size=0,requires-body=true,timeout=10,enable=true
+bilbii 大会员画质 = type=http-response,script-path=https://github.com/Sunert/Script/raw/master/Script/Bilibili/BiliHD.js,pattern=https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)),max-size=131072,requires-body=true,timeout=10,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
