--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,19 +1,24 @@
-# Shadowrocket rule-set
+
 [General]
-# Update-2022.2.21 （不定期更新）
-# ShadowRocket 现已支持 DoH / DoT
-# 您可以根据需求自行决定选用 DNS 服务器的种类和组合方式，例如：混用服务器来实现最佳解析速度；单独 DoH 使用来达到最佳安全性和最低污染度。
-dns-server = 13800000000.rubyfish.cn:853, 1.2.4.8, 114.114.114.114, 223.5.5.5, 8.8.8.8, system
-bypass-tun = 0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-skip-proxy = localhost, *.local, captive.apple.com, 0.0.0.0/8, 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
-doh-server = https://cdn-doh.ssnm.xyz/dns-query
 bypass-system = true
-ipv6 = true
+skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
+tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
+dns-server = system,119.29.29.29,223.5.5.5
+ipv6 = false
+prefer-ipv6 = false
+dns-fallback-system = false
+dns-direct-system = false
+icmp-auto-reply = true
+always-reject-url-rewrite = false
+private-ip-answer = true
+# direct domain fail to resolve use proxy rule
+dns-direct-fallback-proxy = true
 ####参考update-url = https://github.com/a00789123/rules-bak/raw/main/Shadow-Rule-set.conf####
 ####参考https://raw.githubusercontent.com/mymoonyue/Shadowrocket/master/XiaodingdangPro.conf
 ####参考还有其他脚本作者 规则来源神机和毒奶等  纯自用脚本 
 ####说明；如果签到脚本不需要可以删掉前面的#字符 
 [Rule]
+
 # Unbreak 规则修正 
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Unbreak.list,DIRECT
 
@@ -136,48 +141,17 @@ DOMAIN,w.aq.qq.com,REJECT
 DOMAIN,mtrace.qq.com,REJECT
 DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
-
-# > 拦截100 域名权限
-DOMAIN-SUFFIX,huoying666.com,REJECT
-DOMAIN-SUFFIX,s2.huoying666.com,REJECT
-DOMAIN-SUFFIX,u.huoying666.com,REJECT
-
 #其他
-DOMAIN-SUFFIX,d.image.i4.cn,REJECT
-DOMAIN,aop.huoying666.com,REJECT
-DOMAIN-SUFFIX,sngdia.imtmp.net,REJECT
-DOMAIN-SUFFIX,ivapp.net,REJECT
-DOMAIN-KEYWORD,analytics,REJECT
-DOMAIN-SUFFIX,yijiuplus.com,REJECT
-DOMAIN-SUFFIX,jddebug.com,REJECT
-DOMAIN-SUFFIX,umeng.com,REJECT
-DOMAIN-SUFFIX,facebook.com,REJECT
-DOMAIN-SUFFIX,byteug.com,REJECT
-DOMAIN-SUFFIX,ctobsnssdk.com,REJECT
-DOMAIN-SUFFIX,chuxindata.com,REJECT
-DOMAIN-SUFFIX,getui.com,REJECT
-DOMAIN-SUFFIX,yiwealth.com,REJECT
-DOMAIN-SUFFIX,cbndata.com,REJECT
-DOMAIN-SUFFIX,umengcloud.com,REJECT
-DOMAIN-SUFFIX,cnzz.com,REJECT
-DOMAIN-SUFFIX,dutils.com,REJECT
-DOMAIN-SUFFIX,appadhoc.com,REJECT
-DOMAIN-SUFFIX,mob.com,REJECT
-DOMAIN,data.flurry.com,REJECT
-
-#美团
-DOMAIN,dd.meituan.com,REJECT
-DOMAIN,httpdns.meituan.com,REJECT
-DOMAIN,appsec-mobile.meituan.com,REJECT
-DOMAIN,portal-portm.meituan.com,REJECT
 AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
 # GeoIP China
 GEOIP,CN,Direct
 FINAL,PROXY
 
-
 [Host]
-*testflight.apple.com = server:8.8.4.4
+localhost = 127.0.0.1
+*.alicdn.com = server:223.5.5.5
+aliyun.com = server:223.5.5.5
+*.aliyun.com = server:223.5.5.5
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
 *.weixin.com = server:119.28.28.28
@@ -187,14 +161,10 @@ hdslb.com = server:119.29.29.29
 *.126.com = server:119.29.29.29
 *.126.net = server:119.29.29.29
 *.127.net = server:119.29.29.29
-*.netease.com = server:119.29.29.29
 *.mi.com = server:119.29.29.29
 *.xiaomi.com = server:119.29.29.29
-*.pcbeta.com = 120.52.19.113
-mtalk.google.com = 108.177.125.188
 dl.google.com = server:119.29.29.29
 dl.l.google.com = server:119.29.29.29
-
 
 
 [URL Rewrite]
@@ -1432,7 +1402,8 @@ bilbii 大会员画质 = type=http-response,script-path=https://github.com/Suner
 
 
 [MITM]
-enable = false
+ca-passphrase = Shadowrocket
+enable = true
 
 hostname=%APPEND% -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.googlevideo.com,%APPEND%www.google.cn,api.abema.io,api.21jingji.com, api.shayujizhang.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,api-new.app.acfun.cn,api.bjxkhc.com,*.amemv.com,*.snssdk.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,boxer.baidu.com,channel.beitaichufang.com,iapi.bishijie.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,api.chelaile.net.cn,web.chelaile.net.cn,cap.caocaokeji.cn,api.caijingmobile.com,gw.csdn.net,app.poizon.com,api.douban.com,rtbapi.douyucdn.cn,e.dangdang.com,daoyu.sdo.com,*.daydaycook.com,maicai.api.ddxq.mobi,mobile-api2011.elong.com,123.59.31.1,119.18.193.135,cube.elemecdn.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,api.feng.com,*-release.wuta-cam.com,*.youtube.com,gateway.shouqiev.com,dl.app.gtja.com,prom.mobile.gome.com.cn,smkmp.96225.com,api.huomao.com,imeclient.openspeech.cn,api.intsig.net,ih2.ireader.com,nnapp.cloudbae.cn,ib-soft.net,www.inoreader.com,api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com,api.jxedt.com,richmanapi.jxedt.com,*.kakamobi.cn,app-api.jinse.com,ios.wps.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,122.14.246.33,175.102.178.52,api.jr.mi.com,api-mifit*.huami.com,api.mgzf.com,cdn.moji.com,img.meituan.net,p*.meituan.net,s3plus.meituan.net,flowplus.meituan.net,capi.mwee.cn,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,c.m.163.com,client.mail.163.com,interface*.music.163.com,59.111.181.*,sp.kaola.com,support.you.163.com,p.du.163.com,app-api.niu.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,mage.if.qidian.com,msspjh.emarbox.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,api.weibo.cn,mapi.weibo.com,tqt.weibo.cn,sdkapp.uve.weibo.com,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,consumer.fcbox.com,g.cdn.pengpengla.com,snailsleep.net,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,weixin110.qq.com,m.tuniu.com,mob.mddcloud.com,img*.10101111cdn.com,api.vuevideo.net,app.variflight.com,api.cdmcaac.com,api.vistopia.com.cn,app.wy.guahao.com,thor.weidian.com,api.xiachufang.com,api.psy-1.com,portal-xunyou.qingcdn.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,app.yinxiang.com,restapi.iyunmai.com,118.89.204.198,a.qiumibao.com,*.zhuishushenqi.com,www.zybang.com,api.izuiyou.com,tiku.zhan.com,webboot.zhangyue.com,saad.ms.zhangyue.net,trade-acs.m.taobao.com,*.musical.ly,vip1.kuwo.cn,wmapi.meituan.com,www.zhihu.com,api.zhihu.com,zhuanlan.zhihu.com,appcloud2.zhihu.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,testflight.apple.com,photos.adobe.io,lcs-mobile-cops.adobe.io,account.wps.cn,duckduckgo.com,-redirector*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,baimiao.uzero.cn,weather-data.apple.com,grpc.biliapi.net,ap?.bilibili.com,ap?.biliapi.net,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,api.bilibili.com,app.bilibili.com,m.douban.com,security.wechat.com, tagit.hyhuo.com,sub.store,commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, *api.adguard.com,buy.itunes.apple.com,notability.com,rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn
 
