--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -136,9 +136,6 @@ DOMAIN,mtrace.qq.com,REJECT
 DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
 
-#其他
-AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
-
 # GeoIP China
 GEOIP,CN,Direct
 FINAL,PROXY
@@ -185,17 +182,6 @@ dl.l.google.com = server:119.29.29.29
 ^https?:\/\/api\.zhihu\.com\/ab\/api\/v1\/products\/zhihu\/platforms\/ios\/config - reject
 # 屏蔽知乎“我的”页面推荐开通会员的卡片
 ^https?:\/\/api\.zhihu\.com\/people\/self\/new_user_card - reject
-
-# ——————————————————————————分割线——————————————————————————————————————————
-
-#YouTube去广告
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 header
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
-
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break - reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
 
 
 # ——————————————————————————分割线——————————————————————————————————————————
@@ -823,7 +809,6 @@ ctier=[A-Z] citer=A 302
 ##脚本区域
 # ——————————————————————————分割线——————————————————————————————————————————
 
-bilbii 大会员画质 = type=http-response,script-path=https://github.com/Sunert/Script/raw/master/Script/Bilibili/BiliHD.js,pattern=https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)),max-size=131072,requires-body=true,timeout=10,enable=true
 鲨鱼记账 鲨鱼记账 = type=http-response,script-path=https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Script/shayujizhang.js,pattern=^https?:\/\/api\.shayujizhang\.com\/account\/detail\/,max-size=131072,requires-body=true,timeout=10,enable=true
 # ——————————————————————————分割线——————————————————————————————————————————
 
@@ -846,12 +831,6 @@ JD_Cookie = type=http-request,script-path=https://raw.githubusercontent.com/Noby
 
 #DNSPOD
 Dnspod = type=dns,script-path=https://raw.githubusercontent.com/maicoo-l/Surge/master/Script/dnspod.js,script-update-interval=24,enable=true
-
-# ——————————————————————————分割线——————————————————————————————————————————
-
-#抖音去水印    by-NobyDa
-Douyin_remove_watermark_req = type=http-request,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js,pattern=^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/,script-update-interval=24,enable=true
-Douyin_remove_watermark_res = type=http-response,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js,pattern=^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/,max-size=0,requires-body=true,script-update-interval=24,enable=true
 
 # ——————————————————————————分割线——————————————————————————————————————————
 
@@ -1023,7 +1002,7 @@ bilbii 大会员画质 = type=http-response,script-path=https://github.com/Suner
 ca-passphrase = Shadowrocket
 enable = true
 
-hostname=%APPEND% -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,%APPEND%www.google.cn,api.abema.io,api.21jingji.com, api.shayujizhang.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,api-new.app.acfun.cn,api.bjxkhc.com,*.amemv.com,*.snssdk.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,boxer.baidu.com,channel.beitaichufang.com,iapi.bishijie.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,api.chelaile.net.cn,web.chelaile.net.cn,cap.caocaokeji.cn,api.caijingmobile.com,gw.csdn.net,app.poizon.com,api.douban.com,rtbapi.douyucdn.cn,e.dangdang.com,daoyu.sdo.com,*.daydaycook.com,maicai.api.ddxq.mobi,mobile-api2011.elong.com,123.59.31.1,119.18.193.135,cube.elemecdn.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,api.feng.com,*-release.wuta-cam.com,*.youtube.com,gateway.shouqiev.com,dl.app.gtja.com,prom.mobile.gome.com.cn,smkmp.96225.com,api.huomao.com,imeclient.openspeech.cn,api.intsig.net,ih2.ireader.com,nnapp.cloudbae.cn,ib-soft.net,www.inoreader.com,api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com,api.jxedt.com,richmanapi.jxedt.com,*.kakamobi.cn,app-api.jinse.com,ios.wps.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,122.14.246.33,175.102.178.52,api.jr.mi.com,api-mifit*.huami.com,api.mgzf.com,cdn.moji.com,img.meituan.net,p*.meituan.net,s3plus.meituan.net,flowplus.meituan.net,capi.mwee.cn,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,c.m.163.com,client.mail.163.com,interface*.music.163.com,59.111.181.*,sp.kaola.com,support.you.163.com,p.du.163.com,app-api.niu.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,mage.if.qidian.com,msspjh.emarbox.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,api.weibo.cn,mapi.weibo.com,tqt.weibo.cn,sdkapp.uve.weibo.com,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,consumer.fcbox.com,g.cdn.pengpengla.com,snailsleep.net,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,weixin110.qq.com,m.tuniu.com,mob.mddcloud.com,img*.10101111cdn.com,api.vuevideo.net,app.variflight.com,api.cdmcaac.com,api.vistopia.com.cn,app.wy.guahao.com,thor.weidian.com,api.xiachufang.com,api.psy-1.com,portal-xunyou.qingcdn.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,app.yinxiang.com,restapi.iyunmai.com,118.89.204.198,a.qiumibao.com,*.zhuishushenqi.com,www.zybang.com,api.izuiyou.com,tiku.zhan.com,webboot.zhangyue.com,saad.ms.zhangyue.net,trade-acs.m.taobao.com,*.musical.ly,vip1.kuwo.cn,wmapi.meituan.com,www.zhihu.com,api.zhihu.com,zhuanlan.zhihu.com,appcloud2.zhihu.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,testflight.apple.com,photos.adobe.io,lcs-mobile-cops.adobe.io,account.wps.cn,duckduckgo.com,-redirector*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,baimiao.uzero.cn,weather-data.apple.com,grpc.biliapi.net,ap?.bilibili.com,ap?.biliapi.net,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,api.bilibili.com,app.bilibili.com,m.douban.com,security.wechat.com, tagit.hyhuo.com,sub.store,commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, *api.adguard.com,buy.itunes.apple.com,notability.com,rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn
+hostname=%APPEND%www.google.cn,api.abema.io,api.21jingji.com, api.shayujizhang.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,api-new.app.acfun.cn,api.bjxkhc.com,*.amemv.com,*.snssdk.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,boxer.baidu.com,channel.beitaichufang.com,iapi.bishijie.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,api.chelaile.net.cn,web.chelaile.net.cn,cap.caocaokeji.cn,api.caijingmobile.com,gw.csdn.net,app.poizon.com,api.douban.com,rtbapi.douyucdn.cn,e.dangdang.com,daoyu.sdo.com,*.daydaycook.com,maicai.api.ddxq.mobi,mobile-api2011.elong.com,123.59.31.1,119.18.193.135,cube.elemecdn.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,api.feng.com,*-release.wuta-cam.com,*.youtube.com,gateway.shouqiev.com,dl.app.gtja.com,prom.mobile.gome.com.cn,smkmp.96225.com,api.huomao.com,imeclient.openspeech.cn,api.intsig.net,ih2.ireader.com,nnapp.cloudbae.cn,ib-soft.net,www.inoreader.com,api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com,api.jxedt.com,richmanapi.jxedt.com,*.kakamobi.cn,app-api.jinse.com,ios.wps.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,122.14.246.33,175.102.178.52,api.jr.mi.com,api-mifit*.huami.com,api.mgzf.com,cdn.moji.com,img.meituan.net,p*.meituan.net,s3plus.meituan.net,flowplus.meituan.net,capi.mwee.cn,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,c.m.163.com,client.mail.163.com,interface*.music.163.com,59.111.181.*,sp.kaola.com,support.you.163.com,p.du.163.com,app-api.niu.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,mage.if.qidian.com,msspjh.emarbox.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,api.weibo.cn,mapi.weibo.com,tqt.weibo.cn,sdkapp.uve.weibo.com,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,consumer.fcbox.com,g.cdn.pengpengla.com,snailsleep.net,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,weixin110.qq.com,m.tuniu.com,mob.mddcloud.com,img*.10101111cdn.com,api.vuevideo.net,app.variflight.com,api.cdmcaac.com,api.vistopia.com.cn,app.wy.guahao.com,thor.weidian.com,api.xiachufang.com,api.psy-1.com,portal-xunyou.qingcdn.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,app.yinxiang.com,restapi.iyunmai.com,118.89.204.198,a.qiumibao.com,*.zhuishushenqi.com,www.zybang.com,api.izuiyou.com,tiku.zhan.com,webboot.zhangyue.com,saad.ms.zhangyue.net,trade-acs.m.taobao.com,*.musical.ly,vip1.kuwo.cn,wmapi.meituan.com,www.zhihu.com,api.zhihu.com,zhuanlan.zhihu.com,appcloud2.zhihu.com,*.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,testflight.apple.com,photos.adobe.io,lcs-mobile-cops.adobe.io,account.wps.cn,duckduckgo.com,-redirector*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,api.xiuxiu.meitu.com,h5.xiuxiu.meitu.com,baimiao.uzero.cn,weather-data.apple.com,grpc.biliapi.net,ap?.bilibili.com,ap?.biliapi.net,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,api.bilibili.com,app.bilibili.com,m.douban.com,security.wechat.com, tagit.hyhuo.com,sub.store,commerce-i18n-api.faceu.mobi,commerce-api.faceu.mobi, *api.adguard.com,buy.itunes.apple.com,notability.com,rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn
 
 
 
